--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 
+
 body {
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 .navbar-brand {
@@ -132,12 +135,3 @@ body {
     color: white;
     padding: 20px 0;
 }
-
-
-
-
-
-
-
-
-
